--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php": "^8.3",
         "phpunit/phpunit": "^10.0.0",
-        "gamboa.martin/test": "^v5.0.0"
+        "gamboa.martin/test": "^v5.0.0",
+        "gamboa.martin/validacion": "^v5.0.0"
     },
     "require-dev": {
 
