--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": "^8.3",
         "phpunit/phpunit": "^10.0.0",
         "gamboa.martin/test": "^v5.0.0",
-        "gamboa.martin/validacion": "^v5.0.0"
+        "gamboa.martin/validacion": "^v5.0.0",
+        "gamboa.martin/validaciones": "^v1.0.0"
     },
     "require-dev": {
 
